--- a/Experiments/plot/figures/Exp4_externalsort.tex
+++ b/Experiments/plot/figures/Exp4_externalsort.tex
@@ -147,7 +147,7 @@
 		ymax=270,
 		scaled y ticks=false,		  
 		enlarge y limits={0.5,upper},		
-		ylabel={Execution Time[min]},		   
+		ylabel={Execution Time[min.]},		   
 		ytick align=inside,
 		xtick align=outside,			
 		xtick pos=left,
