--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +12,8 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_mean(list): \n",
     "   \n",
     "    mean = np.mean(list)  \n",
-    "    return mean/1000  \n",
+    "    return mean /1000 \n",
     "    # std = np.std(list)\n",
     "    # normal_list = []\n",
     "    # nz=[]\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,25 +148,25 @@
     "                                    if execution == \"CPU\" :                                       \n",
     "                                        total = time_total - time_load \n",
     "                                        io  = time_total - time_cpu_io\n",
-    "                                        if io <= 0.1:\n",
-    "                                            io=0.1\n",
+    "                                        # if io <= 0.1:\n",
+    "                                        #     io=0.1\n",
     "\n",
-    "                                        cpu  = time_cpu_io - time_load\n",
-    "                                        if cpu <= 0.1:\n",
-    "                                            cpu=0.1\n",
+    "                                        # cpu  = time_cpu_io - time_load\n",
+    "                                        # if cpu <= 0.1:\n",
+    "                                        #     cpu=0.1\n",
     "                                     \n",
     "                                    elif execution == \"IO\":                                 \n",
     "                                        total = time_total\n",
     "                                        cpu = time_total - time_cpu_io       \n",
     "                                        io = time_cpu_io\n",
-    "                                        if cpu< 0.1:\n",
-    "                                            cpu=0.1\n",
-    "                                        if io<= 0.1:\n",
-    "                                            io=0.1    \n",
+    "                                        # if cpu< 0.1:\n",
+    "                                        #     cpu=0.1\n",
+    "                                        # if io<= 0.1:\n",
+    "                                        #     io=0.1    \n",
     "\n",
-    "                                    result_total = [base,language,taskset,'Total',platform,seq_rand,nrow,f'{total:.2f}']\n",
-    "                                    result_cpu = [base,language,taskset,'CPU',platform,seq_rand,nrow,f'{cpu:.2f}']\n",
-    "                                    result_io = [base,language,taskset,\"IO\",platform,seq_rand,nrow,f'{io:.2f}']    \n",
+    "                                    result_total = [base,language,taskset,'Total',platform,seq_rand,nrow,f'{total/60:.2f}']\n",
+    "                                    result_cpu = [base,language,taskset,'CPU',platform,seq_rand,nrow,f'{cpu/60:.2f}']\n",
+    "                                    result_io = [base,language,taskset,\"IO\",platform,seq_rand,nrow,f'{io/60:.2f}']    \n",
     "\n",
     "                                    df_final.loc[len(df_final)] = result_total\n",
     "                                    df_final.loc[len(df_final)] = result_cpu\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,31 +288,31 @@
     "    nrows = [10000000,8000000,6000000,4000000,2000000]\n",
     "\n",
     "    executions = [\"CPU\", \"IO\", \"Total\"]\n",
-    "    platforms  = [\"Parallel\", \"Single\"] #\n",
+    "    platforms  = [ \"Single\"] #\"Parallel\",\n",
     "    seq_rands  = [\"Sequential\", \"Random\"]\n",
     "    languages  = [\"Java\", \"CPP\",\"Rust\"]\n",
     "    tasksets   = [True, False]\n",
     "\n",
-    "    #df_write = merge_results(write_results)    \n",
+    "    df_write = merge_results(write_results)    \n",
     "    #df_read = merge_results(read_results)\n",
-    "    #df_load = merge_results(load_to_memory_results)   \n",
-    "    #df_network = merge_results(network_results)   \n",
-    "    df_externalsort = merge_results(externalsort_results)   \n",
+    "    df_load = merge_results(load_to_memory_results)   \n",
+    "    # df_network = merge_results(network_results)   \n",
+    "    # df_externalsort = merge_results(externalsort_results)   \n",
     "   \n",
-    "    #df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
-    "    #                                  seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\n",
+    "    df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
+    "                                      seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\n",
     "\n",
-    "    #df_read_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
-    "    #                                  seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\")                                  \n",
+    "    # df_read_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
+    "    #                                   seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\")                                  \n",
     "\n",
-    "    #df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
+    "    # df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
     "\n",
-    "    df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
-    "                            \n",
-    "    #df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \n",
-    "    #df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)\n",
-    "    #df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
-    "    df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
+    "    # df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
+    "   #                         \n",
+    "    df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \n",
+    "   # df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)\n",
+    "   # df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
+    "   # df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
     "  \n",
     "\n",
     "\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
