--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -162,20 +162,27 @@
 Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 \end{IEEEkeywords}}
 
-\tikzsetnextfilename{Exp0_benchmark}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp0_benchmark}
-        \caption{Benchmark}
-\end{figure*}
-
-
-% \tikzsetnextfilename{Exp1_write_single}
+% \tikzsetnextfilename{Exp0_serialize_benchmark}
 %     \begin{figure*}[h]
 %         \centering
-%         \input{figures/Exp1_write_single}
-%         \caption{Experiment1: Write times for 5M Tweet Objects (Single)}
+%         \input{figures/Exp0_serialize_benchmark}
+%         \caption{Benchmark-Serialize}
 % \end{figure*}
+
+% \tikzsetnextfilename{Exp0_deserializebenchmark}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp0_deserialize_benchmark}
+%         \caption{Benchmark-Deserialize}
+% \end{figure*}
+
+
+\tikzsetnextfilename{Exp1_write_single}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp1_write_single}
+        \caption{Experiment1: Write times for 5M Tweet Objects (Single)}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp1_write_parallel}
 %     \begin{figure*}[h]
